--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -6,7 +6,7 @@
 }
 
 .modal {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -27,10 +27,54 @@
     background-color: orange;
 }
 
-.modal  > form > .add-schedule-of-day {
-    width: 80%;
-    height: 100px;
+.add-schedule-of-day {
+    display: flex;
+    width: 90%;
+    height: fit-content;
+    flex-direction: column;
+    align-items: end;
     background-color: azure;
+
+}
+.schedule-of-day-container {
+    display: grid;
+    width: 100%;
+    height: 80px;
+    grid-template-columns: repeat(10,1fr);
+
+}
+
+.div-input {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    grid-column: 1/9; 
+    background-color: red; 
+    
+}
+.div-input > input{
+    width: 100%;
+
+}
+
+.div-button{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    grid-column: 9/11;
+}
+
+.schedule-of-day-list {
+    width: 95%;
+    height: fit-content;
+    
+}
+
+.schedule-of-day-list > div {
+    width: 100%;
+    height: 50px;
+    background-color: chartreuse;
 }
 
 .add {
@@ -50,9 +94,10 @@
 header  {
     display: grid;
     width: 100%;
-    height: 30px;
+    height: 40px;
     grid-template-columns: repeat(9,1fr);
-    background-color: aquamarine;
+    box-shadow: 0px 2px 3px black;
+    background-color: #fff44f;
 }
 
 .menu-bar {
@@ -60,7 +105,6 @@ header  {
     width: 100%;
     height: 100%;
     grid-column: 1/4;
-    background-color: blue;
 
 }
 
@@ -68,9 +112,12 @@ header  {
     display: flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
     grid-column: 4/7;
-    background-color: green;
+
 }
+
 .time {
     display: flex;
     width: 100%;
@@ -79,7 +126,6 @@ header  {
     align-items: center;
     padding-right: 10px;
     grid-column: 7/10;
-    background-color: red;
 
 }
 
@@ -110,7 +156,6 @@ main {
     margin: 10px 0px;
     flex-direction: column;
     align-items: end;
-    background-color: blueviolet;
 
 }
 
@@ -119,6 +164,9 @@ main {
     width: 100%;
     height: 75px;
     grid-template-columns: repeat(10,1fr);
+    border-radius: 25px;
+    border: 1px solid black;
+    box-shadow: 3px -2px 10px 2px black;
 }
 .title {
     display: flex;
@@ -126,8 +174,7 @@ main {
     height: 100%;
     padding-left: 10px;
     align-items: center;
-    grid-column: 1/8;
-    background-color: blue;
+    grid-column: 1/9;
 
 }
 .title , .progress > p{
@@ -141,7 +188,6 @@ main {
     justify-content: center;
     align-items: center;
     grid-column: 9/11;
-    background-color: rosybrown;
 
 }
 
@@ -152,8 +198,8 @@ main {
     overflow: hidden;
     flex-direction: column;
     align-items: center;
-    background-color: red;
     flex-direction: column;
+    border-left: 1px solid black;
     padding: 0px 5px;
 }
 
@@ -164,7 +210,7 @@ main {
     padding-left: 5px;
     margin: 5px 0px;
     align-items: center;
-    background-color: yellowgreen;
+    border-bottom: 1px solid black
 
 }
 
