--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -5,16 +5,26 @@
     margin: 0;
 }
 
+.menu {
+    position:fixed;
+    display: flex;
+    width: 200px;
+    height: 100%;
+    background-color: whitesmoke;
+    top: 40px;
+}
+
+
 .modal {
     display: none;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     position: fixed;
     width: 100%;
-    height: fit-content;
+    height: 100%;
     padding-top: 50px;
-    
+ 
 }
 
 .modal > form{
@@ -22,9 +32,12 @@
     flex-direction: column;
     align-items: center;
     width: 500px;
-    height: 400px;
+    min-height: 400px;
+    height: fit-content;
     padding-top: 10px;
-    background-color: orange;
+    background-color: yellow;
+    border: 1px solid black;
+    border-radius: 25px;
 }
 
 .add-schedule-of-day {
@@ -36,10 +49,38 @@
     background-color: azure;
 
 }
+
+.salved {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    margin-top: auto;
+    margin-bottom: 5px;
+    justify-content: center;
+    align-items: center;
+}
+.salved > div {
+    display: flex;
+    width: 100px;
+    height: 60%;
+    margin: auto 30px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: beige;
+}
+
+.salved > div > p {
+    font-size: 18px;
+}
+
 .schedule-of-day-container {
     display: grid;
     width: 100%;
     height: 80px;
+    border: 1px solid black;
+    padding: 1px;
     grid-template-columns: repeat(10,1fr);
 
 }
@@ -48,13 +89,19 @@
     display: flex;
     width: 100%;
     height: 100%;
+    padding-left: 10px;
     align-items: center;
     grid-column: 1/9; 
     background-color: red; 
     
 }
 .div-input > input{
-    width: 100%;
+    width: 98%;
+    height: 50px;
+    font-size: 24px;
+    padding-left: 3px;
+    border: 0px;
+    border-radius: 10px;
 
 }
 
@@ -62,20 +109,59 @@
     display: flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
     grid-column: 9/11;
+
 }
+.div-button > div {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    background-color: blueviolet;
+    background-image: url(../Medias/PNG/button.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+     
+}
+
 
 .schedule-of-day-list {
     width: 95%;
     height: fit-content;
+    max-height: 250px;
+    overflow-y:scroll;
     
 }
 
-.schedule-of-day-list > div {
+.add-item {
+    display: flex;
     width: 100%;
-    height: 50px;
+    height: 60px;
+    justify-content: start;
+    align-items: center;
+    padding-left: 10px;
+    margin: 5px 0px;
     background-color: chartreuse;
 }
+
+.add-item > input {
+    width: 85%;
+    height: 50%;
+    font-size: 18px;
+    padding-left: 5px;
+    border: 0px;
+    border-radius: 10px;
+}
+.add-item > div {
+    display: flex;
+    width: 15%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+}
+
 
 .add {
     position: fixed;
@@ -104,7 +190,17 @@ header  {
     display: flex;
     width: 100%;
     height: 100%;
+    padding-left: 10px;
     grid-column: 1/4;
+    align-items: center;
+}
+.menu-bar-button{
+    
+    width: 32px;
+    height: 32px;
+    background-image: url(../Medias/PNG/menu-bar.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 
@@ -136,90 +232,92 @@ header  {
 
 main { 
     width: 100%;
-    height: 1000px;
+    height: 3000px;
     padding: 10px;
+    background-color: blueviolet;
 }
 
-.schedule {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.schedule-day {
+.list-schedule  {
     display: flex;
     width: 100%;
     height: fit-content;
-    margin: 10px 0px;
+    align-items: center;
     flex-direction: column;
-    align-items: end;
+    background-color: red;
 
+}
+
+.schedule{
+    display: flex;
+    width: 95%;
+    height: fit-content;
+    flex-direction: column;
+    margin: 10px 0px;
+    align-items: end;
 }
 
 .container {
-    display: grid;
+    display: flex;
     width: 100%;
     height: 75px;
-    grid-template-columns: repeat(10,1fr);
-    border-radius: 25px;
-    border: 1px solid black;
-    box-shadow: 3px -2px 10px 2px black;
+    background-color: whitesmoke;
+    box-shadow: 0px 0px 5px 2px black;
+    border-radius: 5px 5px 0px 5px;
+
+
 }
 .title {
     display: flex;
-    width: 100%;
+    width: 85%;
     height: 100%;
     padding-left: 10px;
+    overflow-x: hidden;
     align-items: center;
-    grid-column: 1/9;
 
 }
-.title , .progress > p{
+.title > p {
     font-size: 36px;
 }
 
 .progress {
     display: flex;
-    width: 100%;
+    width: 15%;
     height: 100%;
-    justify-content: center;
+    padding-right: 10px;
     align-items: center;
-    grid-column: 9/11;
-
+    justify-content: end
+}
+.progress > p {
+    font-size: 38px;
 }
 
-.list {
+.list-item{
     display: flex;
-    width: 95%;
+    width: 90%;
     height: fit-content;
-    overflow: hidden;
     flex-direction: column;
-    align-items: center;
-    flex-direction: column;
-    border-left: 1px solid black;
-    padding: 0px 5px;
+    box-shadow: 0px 5px 5px 2px black;
+
 }
 
-.item { 
+.item {
     display: flex;
-    width: 98%;
-    height: 30px;
+    width: 100%;
+    height: 40px;
+    overflow-x: hidden;
     padding-left: 5px;
-    margin: 5px 0px;
     align-items: center;
-    border-bottom: 1px solid black
-
+    background-color: whitesmoke;
+    
 }
 
-.item > input{
+.item > input {
     width: 25px;
     height: 25px;
-
 }
 
-.item > p {
-    margin: auto 5px;
+.item  > p {
+    width: 100%;
+    margin-left: 10px;
+    font-size: 24px;
 }
