--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -5,16 +5,6 @@
     margin: 0;
 }
 
-.menu {
-    position:fixed;
-    display: flex;
-    width: 200px;
-    height: 100%;
-    background-color: whitesmoke;
-    top: 40px;
-}
-
-
 .modal {
     display: none;
     flex-direction: column;
@@ -162,7 +152,6 @@
 
 }
 
-
 .add {
     position: fixed;
     width: 60px;
@@ -176,6 +165,23 @@
     background-color: aliceblue;
 }
 
+.menu {
+    position:fixed;
+    display: flex;
+    transition-property: all;
+    transition-duration: 500ms;
+    overflow-x: hidden;
+    width: 0px;
+    height: 100%;
+    background-color: whitesmoke;
+    top: 40px;
+}
+#checkbox-open-menu {
+    display: none;
+}
+#checkbox-open-menu:checked + .menu {
+    width: 150px;
+}
 
 header  {
     display: grid;
@@ -256,6 +262,18 @@ main {
     align-items: end;
 }
 
+.checkbox-open-list{
+    display: none ;
+}
+.checkbox-open-list:checked ~ .list-item{
+    height: fit-content;
+}
+
+label {
+    width: 100%;
+    height: 100%;
+}
+
 .container {
     display: flex;
     width: 100%;
@@ -264,8 +282,8 @@ main {
     box-shadow: 0px 0px 5px 2px black;
     border-radius: 5px 5px 0px 5px;
 
-
 }
+
 .title {
     display: flex;
     width: 85%;
@@ -294,9 +312,11 @@ main {
 .list-item{
     display: flex;
     width: 90%;
-    height: fit-content;
+    height: 0px;
     flex-direction: column;
     box-shadow: 0px 5px 5px 2px black;
+    overflow: hidden;
+
 
 }
 
@@ -321,3 +341,4 @@ main {
     margin-left: 10px;
     font-size: 24px;
 }
+
